--- a/src/ components/RecipeList.css
+++ b/src/ components/RecipeList.css
@@ -45,6 +45,14 @@
   margin: 20px auto 0;
 }
 
+.recipe-list .delete {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  filter: invert(60%);
+}
+
 /* dark mode */
 .recipe-list .card.dark {
   background: #555;
